fix(skiff): few missed spots (#345)
* Update catppuccin.user.css

Missed a few dropdowns, this should cover them all much better

* Update catppuccin.user.css

Fixing the account/service dropdown in latte

* Update catppuccin.user.css

Fixing text in dropdowns, they weren't changed previously

* Update catppuccin.user.css

Fixing search bars within dropdowns

* Update catppuccin.user.css

Added tutorial to be always dark theme

* Update catppuccin.user.css

Missed 2nd comment for tutorial

* Update catppuccin.user.css

Only need to theme crypto header in dark modes

* Update catppuccin.user.css

changed to v0.0.2

* Fix unread dot

Whoopsies, i had orginially skinned this but was undone when I redid everything

--- a/styles/skiff/catppuccin.user.css
+++ b/styles/skiff/catppuccin.user.css
@@ -2,7 +2,7 @@
 @name Skiff Catppuccin
 @namespace github.com/catppuccin/userstyles/styles/skiff
 @homepageURL https://github.com/catppuccin/userstyles/tree/main/styles/skiff
-@version 0.0.1
+@version 0.0.2
 @updateURL https://github.com/catppuccin/userstyles/raw/main/styles/skiff/catppuccin.user.css
 @description Soothing pastel theme for skiff
 @author Catppuccin
@@ -66,7 +66,6 @@
 
       /* Text fields and popups */
       --bg-field-default: @mantle !important;
-      --bg-emphasis: @crust !important;
 
       /* Text */
       --text-primary: @text !important;
@@ -85,32 +84,76 @@
       color: @accent-color;
     }
 
-    /* Pay with crypto header */
-    .cEYYtP {
-      background: @mantle !important;
+    /* Unread dot */
+    .bguZwu {
+       background: @accent-color;
     }
 
-    /* Change account/service dropdown */
-    .fLWrAr {
-      background: @mantle;
+    /* Change account/service dropdown and the tutorial popup, always dark mode regardless of setting */
+    & when not (@lookup = latte) {
+      /* Change account/service dropdown */
+      .fLWrAr {
+        background: @mantle;
+      }
+      .gWUKFc {
+        background: @base;
+      }
+        
+      /* tutorial popup */
+      html,
+      body {
+        --bg-emphasis: @crust !important;
+      }
+      /* Pay with crypto header */
+      .cEYYtP {
+        background: @mantle !important;
+      } 
     }
-    .gWUKFc {
-      background: @base;
+    & when (@lookup = latte) {
+      /* Change account/service dropdown */
+      .fLWrAr {
+        background: @catppuccin[@mocha][@mantle];
+      }
+      .gWUKFc {
+        background: @catppuccin[@mocha][@mantle];
+      }
+      /* tutorial popup */
+      html,
+      body {
+        --bg-emphasis: @catppuccin[@mocha][@crust] !important;
+      }
     }
 
     /* Various dropdowns */
-    .hDdcNR,
-    .dxWBpl,
-    .dTfXFq,
-    .gsYYHH.solid.dark {
+    .optionMenu {
       background: @crust !important;
     }
+      
+    /* Text in dropdowns */
+      .imrrcE,
+      .kvGqVe {
+          color: @text;
+      }
+      .dkQatM {
+          color: @subtext0;
+      }
 
     /* Search menu */
     .bFaRKt {
       background: @mantle !important;
     }
-
+    .enSdmg,
+    .cGshPA,
+    .epvcfe {
+        color: @subtext0;
+        caret-color: @accent-color;
+    }
+    .enSdmg:focus,
+    .cGshPA:focus,
+    .epvcfe:focus {
+        color: @text;
+    }
+    
     /* Mail, folder, and tag colors */
     .dSuCgH {
       border-color: @red !important;
